name:                final-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/final-project#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- executable final-project
library
  exposed-modules:    ASTInterpreter, CCompiler, CParser, FeaturesTests, ICInterpreter
  hs-source-dirs:      src
  -- main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends:       containers, base >= 4.7 && < 5

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
-- TODO: detailed-1.0 is preferred
  hs-source-dirs:
    tests
  main-is: Main.hs
  -- other-modules: LangParserTest, EvalUnsafeTest, LangTest
  build-depends:
      containers, base >= 4.7 && < 5
    , tasty >= 0.11.1, tasty-hunit, tasty-quickcheck, QuickCheck
    -- , hw
